--- a/privacy-protection/papers/notes/2018-11-21-privsr.md
+++ b/privacy-protection/papers/notes/2018-11-21-privsr.md
@@ -70,3 +70,7 @@ Differential privacy; Social recommendation
     - Recommendation effectiveness comparison
     - Privacy protection comparison
     - Impact of parameters <img src="https://latex.codecogs.com/gif.latex?\epsilon" title="\epsilon" /> and <img src="https://latex.codecogs.com/gif.latex?\beta" title="\beta" />
+    
+**Question**:
+
+[How to set the privacy budget of the derived item latent matrix?](https://github.com/WenyanLiu/apprenticeship/issues/1)
