--- a/privacy-protection/papers/notes/2018-11-29-pegasus.md
+++ b/privacy-protection/papers/notes/2018-11-29-pegasus.md
@@ -16,21 +16,66 @@ Differential privacy; Streaming data
 
 ### Motivation
 
-
+Releasing continuous query answers on real time streams under differential privacy.
 
 ### Approach
 
-*Perturb-Group-Smooth* technique (PeGaSus):
-*Perturber* generates a stream of noisy counts, a data-adaptive *Grouper* identifies stable uniform regions in the stream and computes a partition of the data received so far, and a query specific *Smoother* combines the output of the *Perturber* and *Grouper* to generate the final private estimate of a query answer at each time step.
+![The framework of PeGaSus algorithm](figures/PeGaSus-1.png)
+
+*Perturb-Group-Smooth (PeGaSus)* based Stream Release:
+
+- *Perturber*: consumes the input stream, adds noise to each incoming element of the stream, and generates a stream of noisy counts;
+
+- Data-adaptive *Grouper*: consumes the input stream, identifies stable uniform regions in the stream and computes a partition of the data received so far;
+
+- Query specific *Smoother*: performs post-processing, combines the output of the *Perturber* and *Grouper* to generate the final private estimate of a query answer at each time step.
+
+***Perturber***:
+
+Laplace Mechanism
+
+_**Deviation-based Grouper (DBG)**_:
+
+A differentially private method for online partitioning which chooses partitions that approximately minimizes a quality score based on deviation.
+
+<img src="algorithms/PeGaSus-2.png" alt="Deviation based Grouper (DBG)" width=50%>
+
+When a new data <img src="https://latex.codecogs.com/gif.latex?c_t" title="c_t" /> arrives at time <img src="https://latex.codecogs.com/gif.latex?t" title="t" />, we check the status of the last group <img src="https://latex.codecogs.com/gif.latex?G" title="G" /> from the previous partition <img src="https://latex.codecogs.com/gif.latex?P_{t-1}" title="P_{t-1}" />. If <img src="https://latex.codecogs.com/gif.latex?G" title="G" /> is closed, we put <img src="https://latex.codecogs.com/gif.latex?c_t" title="c_t" /> into a new open group and reset the noisy threshold. Otherwise, we compute the deviation of the <img src="https://latex.codecogs.com/gif.latex?C_t[G&space;\cup&space;\left&space;\{&space;t&space;\right&space;\}]" title="C_t[G \cup \left \{ t \right \}]" /> and compare a noisy version of the deviation value with the noisy threshold. If the noisy deviation is smaller than the noisy threshold, we add <img src="https://latex.codecogs.com/gif.latex?\left&space;\{&space;t&space;\right&space;\}" title="\left \{ t \right \}" /> into the open <img src="https://latex.codecogs.com/gif.latex?G" title="G" />. Otherwise, we add a new group <img src="https://latex.codecogs.com/gif.latex?\left&space;\{&space;t&space;\right&space;\}" title="\left \{ t \right \}" /> into the partition and close both <img src="https://latex.codecogs.com/gif.latex?G" title="G" /> and <img src="https://latex.codecogs.com/gif.latex?\left&space;\{&space;t&space;\right&space;\}" title="\left \{ t \right \}" />.
+
+***Smoother***:
+
+<img src="algorithms/PeGaSus-4.png" alt="Deviation based Grouper (DBG)" width=50%>
+
+At each time step, it calls `PRUNE`. Then, for each aggregation, if it has been pruned. it simply outputs a count of 0. Otherwise, it applies the PeGaSus algorithm to the stream where the privacy budget passed to *Perturber* and *Grouper* is adjusted based on what has been pruned and the height of the tree.
+
+The function `PRUNE` checks each aggregation <img src="https://latex.codecogs.com/gif.latex?agg&space;\in&space;AGG" title="agg \in AGG" /> from level 1 to level <img src="https://latex.codecogs.com/gif.latex?h" title="h" />. If the current <img src="https://latex.codecogs.com/gif.latex?agg" title="agg" /> has been pruned, all its children are automatically pruned. Otherwise, we compare this aggregation's current count, <img src="https://latex.codecogs.com/gif.latex?c_t" title="c_t" />(<img src="https://latex.codecogs.com/gif.latex?agg" title="agg" />), against a user-specified threshold <img src="https://latex.codecogs.com/gif.latex?\beta" title="\beta" />. If the count is below threshold, it prunes all the children of <img src="https://latex.codecogs.com/gif.latex?agg" title="agg" />. Further, the privacy budget that would have been spent on the descendants is saved.
 
 ### Contribution
 
-
+- Simultaneously support a range of query workloads over multiple resolutions over the stream
 
 ### Performance
 
-**Dataset**:
+**Dataset**: Real traces, taken over a six month period, from approximately 4000 WiFi access points (AP) distributed across the campus of a large educational institution.
 
 **Baseline**:
 
+- Laplace Mechanism (LM)
+
+- Backward Smoothing of results from Laplace Mechanism (BS_t)
+
+- Sliding Window query in terms of a fixed windows size <img src="https://latex.codecogs.com/gif.latex?w" title="w" /> (SW_w)
+
 **Metric**:
+
+- <img src="https://latex.codecogs.com/gif.latex?L_1" title="L_1" /> error
+
+    - Answer unit counting queries on data streams with a single target state.
+    
+    - Answer sliding windows queries on data streams with a single target state.
+
+- ROC curve
+
+    - Event monitoring (detecting jumping and dropping points as well as low signal points) on data streams with a single target state.
+    
+    - Answer unit counting queries on a collection of hierarchical aggregations using data streams with multiple target states.
